--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A package for setting up strict NestJS response schema's",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "publish:npm": "npm publish --access public"
+    "publish:npm": "npm publish --access public",
+    "release": "release-it"
   },
   "author": "Damien Eichhorn",
   "license": "MIT",
@@ -13,5 +14,9 @@
     "@nestjs/common": "^8.2.5",
     "@nestjs/swagger": "^5.1.5",
     "typescript": "^4.5.4"
+  },
+  "repository": "https://github.com/damiendawreck/nestjs-response-schema",
+  "devDependencies": {
+    "release-it": "^14.12.3"
   }
 }
