--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nestjs-response-schema",
-  "version": "0.0.1",
+  "name": "@dawreck/nestjs-response-schema",
+  "version": "0.0.12",
   "main": "dist/index.js",
   "description": "A package for setting up strict NestJS response schema's",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "publish:npm": "npm publish --access public",
-    "release": "release-it"
+    "release": "release-it --no-git.requireCleanWorkingDir"
   },
   "author": "Damien Eichhorn",
   "license": "MIT",
