--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,4 +39,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run release:ci
+      env:
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     
