--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,7 +38,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+    - run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
     - run: npm run release:ci
-      env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     
