--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -p tsconfig.json",
     "publish:npm": "npm publish --access public",
     "release": "release-it --no-git.requireCleanWorkingDir",
-    "release:ci": "release-it --ci"
+    "release:ci": "npm run build && release-it --ci"
   },
   "author": "Damien Eichhorn",
   "license": "MIT",
